--- a/src/scss/produto.scss
+++ b/src/scss/produto.scss
@@ -7,4 +7,5 @@
 @import 'botoes';
 @import 'alertas';
 @import 'produto/_produto-detalhe';
+@import 'produto/produto-detalhe-mobile';
 @import 'produto/associacoes';
