--- a/src/scss/_basico.scss
+++ b/src/scss/_basico.scss
@@ -1,7 +1,7 @@
 body {
     font-family: $font-family;
     font-size: $font-size;
-    color: $font-dark;
+    color: $gray;
     margin: 0;
     padding: 0;
 
@@ -16,10 +16,54 @@ body {
             height: 100%;
             z-index: 3;
         }
+
+    }
+
+    &.category-opened {
+        &::before {
+            content: '';
+            background-color: rgba(0, 0, 0, 0.45);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 3;
+        }
+
+        #header {
+
+            .top-bar,
+            .category-bar,
+            .main-bar {
+                position: relative;
+                z-index: 99;
+            }
+        }
     }
 
     &.area-profile {
         background-color: $gray-extralight;
+    }
+
+    &.topo-simples {
+        header {
+            &#header {
+                .main-bar {
+                    box-shadow: 1px 1px 1px 1px #ddd;
+                }
+            }
+        }
+    }
+
+    &.rodape-simples {
+        footer {
+            &#footer {
+                .certificados {
+                    border-top: 0;
+                }
+            }
+        }
     }
 
     #footer,
@@ -56,6 +100,7 @@ body {
     input[type="text"],
     textarea,
     select {
+        font-size: 14px;
         display: block;
         width: 100%;
         height: 42px;
@@ -99,9 +144,6 @@ body {
             font-size: 0.97em;
         }
 
-        span.error {
-            display: none !important;
-        }
     }
 
     ul {
@@ -280,10 +322,11 @@ body {
     }
 
     #logo {
-        .logo-center {
-            @media screen and (min-width: 426px) and (max-width: 991px) {
-                display: flex;
-                justify-content: center;
+        @media screen and (max-width: 767px) {
+            padding-left: 0;
+
+            a {
+                height: 30px !important;
             }
         }
 
@@ -303,7 +346,7 @@ body {
             width: 170px;
             height: 40px;
             font-size: 0;
-            margin: 0 auto;
+            margin: 0;
             background-size: contain;
             background-position-y: 0;
 
@@ -322,6 +365,11 @@ body {
         opacity: 0.5;
         z-index: 2;
     }
+}
+
+.no-padding {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .wrapper,
