--- a/src/scss/_preco.scss
+++ b/src/scss/_preco.scss
@@ -1,60 +1,111 @@
+[class*="context-product"] {
+    .product-detail {
+        .information {
+            .wd-product-price-description {
+                .list-price {
+                    span {
+                        font-size: 32px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .wd-product-price-description {
-	margin: 10px 0;
-	.list-price {
-		color: $gray-dark;
-		font-size: 0.9em;
-		.prefix {
+    margin: 10px 0;
+    margin-top: 0;
 
-		}
-		span {
+    .list-price {
+        color: $gray-25;
+        font-size: 15px;
+        font-weight: 500;
+        display: flex;
+        flex-direction: column;
 
-		}
-		&.variation {
-			color: $font-dark;
-			span {
-				font-weight: bold;
-				font-size: 1.6em;
-				color: $base-color;
-			}
-		}
-	}
-	.sale-price {
-		.prefix {
-			font-size: 1em;
-		}
-		span {
-			font-weight: bold;
-			font-size: 1.4em;
-			color: $base-color;
-		}
-	}
-	.condition {
-		font-size: 1em;
-		line-height: 1.3em;
-		.label {
+        &.de-por {
+            display: block;
 
-		}
-		.parcels, .parcel-value {
-			font-weight: bold;
-		}
-	}
-	.savings {
-		font-size: 1em;
-		.discount {
-			font-weight: bold;
-			color: $price-off;
-		}
-	}
+            span {
+                font-size: 14px;
+                color: $gray-25;
+                font-weight: 400;
+            }
+        }
+
+        .prefix {}
+
+        span {
+            font-size: 24px;
+            color: $gray;
+            font-weight: 600;
+        }
+
+        &.variation {
+            color: $font-dark;
+
+            span {
+                font-weight: bold;
+                font-size: 1.6em;
+                color: $base-color;
+            }
+        }
+    }
+
+    .sale-price {
+        .prefix {
+            font-size: 1em;
+        }
+
+        span {
+            font-size: 24px;
+            color: $gray;
+            font-weight: 600;
+        }
+    }
+
+    .condition {
+        font-size: 1em;
+        line-height: 1.3em;
+
+        .label {}
+
+        .parcels,
+        .parcel-value {
+            font-weight: bold;
+        }
+    }
+
+    .savings {
+        font-size: 1em;
+
+        .discount {
+            font-weight: bold;
+            color: $price-off;
+        }
+    }
 }
+
 .wd-product-line {
-	.wd-product-price-description {
-     	height: 75px;
-	}
+    .wd-product-price-description {
+        height: 60px;
+        display: flex;
+        align-items: center;
+
+        .condition {
+            span {
+                font-size: 14px;
+                font-weight: 500;
+                color: $gray-25;
+            }
+        }
+    }
 }
+
 .product-detail .head {
-	.sale-price {
-		span {
-			font-size: 2em;
-		}
-	}
+    .sale-price {
+        span {
+            font-size: 32px;
+        }
+    }
 }
