--- a/src/scss/carrinho/_carrinho.scss
+++ b/src/scss/carrinho/_carrinho.scss
@@ -34,13 +34,29 @@
     }
 
     .wd-checkout-basket-buttons {
-        margin-bottom: 40px;
+        margin-top: 40px;
+        margin-bottom: 20px;
         width: 100%;
+
+        button {
+            @include round(0);
+        }
 
         .bt-keep-buying {
             float: left;
-            margin-top: 34px;
+            margin-top: 0;
             margin-left: 0;
+            height: 60px;
+            border: 1px solid $gray-75;
+            color: $gray-25;
+        }
+
+        .bt-checkout {
+            height: 60px;
+
+            small {
+                display: none;
+            }
         }
 
         .bt-clear-basket,
@@ -53,6 +69,7 @@
         .wd-checkout-basket-oneclickbuy {
             width: auto;
             margin-top: 15px;
+            display: none !important;
 
             .btn-basket-oneclickbuy {
                 @extend .btn-big;
@@ -247,9 +264,7 @@
 
                 .location {
                     .time {
-                        @media screen and(max-width: 991px) {
-                            display: none;
-                        }
+                        display: none;
                     }
                 }
 
