--- a/src/scss/rodape/_rodape.scss
+++ b/src/scss/rodape/_rodape.scss
@@ -1,7 +1,7 @@
 #footer {
     >.wrapper {
         >div {
-            padding: 50px 0;
+            padding: 30px 0;
             border-bottom: 1px solid $gray-medium;
             overflow: hidden;
 
@@ -11,8 +11,8 @@
         }
     }
 
-    border-top: 2px solid #dfdfdf;
-    background: #f6f6f6;
+    border-top:0;
+    background: #F5F5F5;
 
     h2 {
         text-align: center;
@@ -21,10 +21,39 @@
 
     .footer-newsletter {
         text-align: center;
+        display: flex;
+        justify-content: center;
+        padding: 35px 0 !important;
+
+        .content {
+            @media screen and (min-width: 992px) {
+                display: flex;
+                flex-direction: row;
+                padding: 0;
+            }
+
+            h2 {
+                font-size: 18px;
+                color: $gray-25;
+                font-weight: bold;
+                text-align: left;
+
+                small {
+                    margin-top: 0;
+                    font-size: 14px;
+                    font-weight: normal;
+                }
+            }
+        }
 
         .wd-marketing-newsletter {
             max-width: 500px;
-            margin: 0 auto;
+            margin: 0;
+            width: 100%;
+
+            form {
+                margin: 10px 0;
+            }
 
             .wd-header,
             .input-name-marketing-newsletter,
@@ -34,7 +63,7 @@
             }
 
             .input-email-marketing-newsletter {
-                width: 79%;
+                width: 67%;
                 float: left;
 
                 @include grid-media($grid-smartphone) {
@@ -48,7 +77,7 @@
 
             .input-button-marketing-newsletter {
                 float: left;
-                width: 21%;
+                width: 33%;
 
                 @include grid-media($grid-smartphone) {
                     width: 30%;
@@ -57,6 +86,10 @@
                 button {
                     @extend .btn-wide;
                     @include round-left(0);
+
+                    @media screen and (max-width: 991px) {
+                        padding: 14px 0;
+                    }
                 }
             }
         }
@@ -108,16 +141,37 @@
         }
     }
 
+    .content-center {
+        .col {
+            @media screen and(min-width: 992px) {
+                padding-left: 0;
+                padding-right: 0;
+            }
+
+            .section-title {
+                font-size: 14px;
+                color: $gray-25;
+                font-weight: bold;
+            }
+        }
+    }
+
     .footer-category {
         h2 {
             text-align: left;
             padding: 0;
         }
 
-        .cms-page-menu {
+        &.cms-page-menu {
             float: right;
 
             .cms-page {
+                h2 {
+                    small {
+                        margin-top: 0;
+                    }
+                }
+
                 &.active {
                     small {
                         @include grid-media($grid-smartphone) {
@@ -156,7 +210,13 @@
                             margin-top: 15px;
 
                             a {
-                                font-size: 0.9em;
+                                font-size: 14px;
+                                color: $gray-25;
+                                font-weight: normal;
+
+                                &:hover {
+                                    color: #373a3f;
+                                }
                             }
                         }
                     }
@@ -165,9 +225,58 @@
         }
     }
 
+    .central-atendimento {
+        div {
+            display: inline-flex;
+            margin-bottom: 16px;
+
+            i {
+                font-size: 24px;
+            }
+
+            span {
+                display: flex;
+                flex-direction: column;
+                margin-left: 16px;
+
+                strong,
+                a {
+                    line-height: 1;
+                    font-size: 14px;
+                    color: $gray-25;
+                    font-weight: normal;
+
+                    &.chat-online {
+                        text-decoration: underline;
+                        color: $base-color;
+                    }
+                }
+
+                strong {
+                    padding-bottom: 5px;
+                }
+            }
+
+            &.horario {
+                padding-right: 20px;
+
+                i {
+                    margin-right: 16px;
+                }
+
+                small,
+                strong {
+                    font-size: 14px;
+                    font-weight: normal;
+                    color: $gray-25;
+                }
+            }
+        }
+    }
+
     .footer-social {
         * {
-            text-align: center;
+            text-align: left;
         }
 
         .box {
@@ -176,27 +285,30 @@
             overflow: hidden;
         }
 
-        .icons {
-            a {
-                padding: 1.3em 0.8em;
-                display: inline-block;
-            }
 
-            i {
-                font-size: 30px;
-            }
+        a {
+            padding: 0;
+            padding-right: 20px;
+            display: inline-block;
         }
+
+        i {
+            font-size: 30px;
+        }
+
     }
 
     .certificados,
     .assinatura {
-        background-color: #fff;
+        background-color: #F5F5F5;
         color: $gray-dark;
     }
 
     .certificados {
-        border-top: 1px solid $gray-medium;
-        padding: 30px 0;
+        border-top: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
 
         &.simples {
             border-top: 0;
@@ -205,18 +317,18 @@
         .col {
             padding-top: 10px;
             padding-bottom: 10px;
+            max-height: 100px;
+
         }
 
         .title,
         .shields {
-            float: left;
-        }
-
-        .title {
-            margin-right: 10px;
+            float: initial;
         }
 
         .shields {
+            margin-top: 12px;
+
             >a {
                 float: left;
                 margin: 5px 10px;
@@ -256,6 +368,8 @@
     }
 
     .assinatura {
+        padding: 0 !important;
+
         .wrapper {
             >.row {
                 border-bottom: 1px solid $gray-light;
@@ -266,6 +380,8 @@
         }
 
         .aboutme {
+            padding: 40px 0;
+
             p {
                 margin: 0;
                 text-align: justify;
@@ -277,9 +393,23 @@
             text-align: center;
         }
 
+        .copyright {
+            margin-bottom: 50px;
+        }
+
         .creators {
             padding-top: 20px;
             overflow: hidden;
+            border-top: 1px solid #CED4DA;
+
+            .row {
+                .col {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
 
             small {
                 display: block;
@@ -288,7 +418,56 @@
 
             .logo-creator {
                 img {
-                    width: 230px;
+                    width: 200px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 991px) {
+    #footer {
+        .content-center {
+            >div {
+                margin-bottom: 10px;
+
+                &.cms-page-menu {
+                    padding: 0;
+                }
+
+                @media screen and(min-width: 768px) {
+                    &.certificados {
+                        flex-direction: row;
+                    }
+                }
+            }
+
+        }
+
+        .footer-newsletter {
+            .content {
+                h2 {
+                    text-align: center;
+                }
+
+                .wd-marketing-newsletter {
+                    margin: 0 auto;
+                }
+            }
+        }
+
+        .assinatura {
+            .aboutme {
+                #logo {
+                    display: flex;
+                    justify-content: center;
+                    padding: 0;
+
+                    a {
+                        height: 50px !important;
+                        margin-bottom: 10px;
+                        margin-left: 15px;
+                    }
                 }
             }
         }
