--- a/src/scss/topo/_topo.scss
+++ b/src/scss/topo/_topo.scss
@@ -18,7 +18,7 @@ header {
     .ofertas,
     .links {
         a {
-            color: $base-color-1;
+            color: $base-color;
         }
 
         i {
@@ -45,7 +45,14 @@ header {
         background: #fff;
 
         &.simples {
-            box-shadow: 1px 1px 1px 1px $gray-semilight;
+            box-shadow: none !important;
+            height: 112px;
+            padding: 15px 0;
+            border-bottom: 1px solid #CED4DA;
+
+            #top-search {
+                margin-top: 9px;
+            }
         }
 
         .wd-search {
@@ -53,25 +60,48 @@ header {
 
             .input-wrapper {
                 margin-bottom: 0;
+                margin-right: 0;
+                @include round-right(0);
 
                 input {
                     @include round-right(0);
+                    border: 1px solid #CED4DA;
+                }
+
+                .suggestion-box {
+                    .suggestion-box-wrapper {
+                        .suggestion-products {
+                            .suggestion-title {
+                                margin-bottom: 16px;
+                            }
+
+                            ul {
+                                li {
+                                    margin: 0;
+                                    padding: 17px 24px;
+                                }
+                            }
+                        }
+                    }
                 }
             }
 
             button {
                 position: absolute;
-                right: 4px;
+                right: 0;
                 top: 0;
                 width: auto;
-                background-color: $base-color-1;
+                background-color: $base-color;
                 @include round-left(0);
             }
+
         }
 
         .wd-profile-welcome-shopper {
             position: relative;
             line-height: 30px;
+            padding-top: 3px;
+            height: 36px;
 
             &:hover {
                 .widget-content {
@@ -80,9 +110,9 @@ header {
             }
 
             i.fa-user {
-                font-size: 24px;
+                font-size: 30px;
                 padding-right: 5px;
-                color: $base-color-1;
+                color: $base-color;
             }
 
             .widget-title {
@@ -91,11 +121,17 @@ header {
                 .title {
                     color: $font-dark;
                     cursor: pointer;
-                    display: inline-block;
+                    display: none;
 
                     span,
                     i {
-                        color: $base-color-1;
+                        color: $base-color;
+                    }
+                }
+
+                i {
+                    &.fa-chevron-down {
+                        display: none;
                     }
                 }
             }
@@ -103,16 +139,30 @@ header {
             .widget-content {
                 display: none;
                 position: absolute;
-                left: 0px;
-                top: 30px;
+                left: -83px;
+                top: 50px;
                 min-height: 100px;
-                width: 150px;
+                width: 230px;
                 padding: 15px;
                 box-sizing: border-box;
-                border: 1px solid $gray-light;
+                border: 1px solid #CED4DA;
                 background: #fff;
                 overflow: visible;
-                z-index: 2;
+                z-index: 32;
+
+                &::before {
+                    content: '';
+                    background-image: url(/custom/content/themes/Base/Imagens/ponta5.png?nocache);
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    font-size: 22px;
+                    position: absolute;
+                    top: -10px;
+                    left: 45%;
+                    line-height: 0;
+                    width: 16px;
+                    height: 12px;
+                }
 
                 .login-wrapper,
                 .new-account {
@@ -125,16 +175,43 @@ header {
                 }
 
                 .login-title {
-                    background-color: $btn-buy;
-                    color: $font-light;
+                    background-color: white;
+                    color: $gray-25;
                     margin-bottom: 10px;
-                    @include round(2px);
+                    border: 1px solid $gray-75;
+                    font-weight: bold;
+                    height: 38px;
+                    line-height: 38px;
                 }
 
                 .shopper-authenticated {
                     a {
                         line-height: auto;
                         display: block;
+                        margin-top: 10px;
+
+                        i {
+                            width: 30px;
+                            color: $gray-25;
+                            margin-right: 6px;
+                            text-align: left;
+
+                            &.fa-user,
+                            &.fa-sign-out-alt {
+                                padding-left: 2px;
+                                font-size: 22px;
+                            }
+
+                            &.fa-box-open {
+                                font-size: 18px;
+                                padding-left: 1px;
+                            }
+                        }
+
+                        span,
+                        b {
+                            color: $gray-25;
+                        }
 
                         &.put-pipe {
                             padding: 0;
@@ -149,6 +226,35 @@ header {
                         }
                     }
                 }
+
+                .shopper-not-authenticated {
+                    .login-simple {
+                        display: flex;
+                        flex-direction: column;
+
+                        a {
+                            font-weight: bold;
+                            color: $gray-25;
+                            margin-top: 10px;
+
+                            &:hover {
+                                text-decoration: none;
+                            }
+
+                            i {
+                                font-size: 20px;
+                                color: $gray-25;
+                                margin-right: 10px;
+                                padding: 0;
+
+                                &.fa-user {
+                                    margin-left: 5px;
+                                    margin-right: 12px;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
 
@@ -156,8 +262,23 @@ header {
             font-size: 30px;
             text-align: center;
 
+            @media screen and (max-width: 767px) {
+                font-size: 0;
+                display: flex;
+                justify-content: flex-end;
+                padding-right: 10px;
+
+                a {
+                    font-size: 0;
+
+                    i {
+                        font-size: 23px;
+                    }
+                }
+            }
+
             a {
-                color: $base-color-2;
+                color: $base-color;
 
                 &:hover {
                     color: darken($base-color-2, 10%);
@@ -182,15 +303,50 @@ header {
 
     .icons-resume {
         padding: 0;
+        height: 23px;
 
         .main-wishlist,
         .dropdown-cart {
             padding: 0;
         }
 
-        .dropdown-cart {
+        .main-wishlist {
+            font-size: 23px !important;
+            max-width: 30px;
+
+            @media screen and(min-width: 768px) {
+                top: -2px;
+                margin-right: 15px;
+            }
+        }
+
+        .main-wishlist .dropdown-cart {
             font-size: 1.2em;
         }
+
+        .dropdown-cart {
+            .wd-checkout-basket-summaryheader {
+                padding-right: 15px;
+                display: flex;
+                justify-content: flex-end;
+
+                >a {
+                    font-size: 0;
+
+                    b {
+                        &::before {
+                            font-size: 23px !important;
+                            top: 0;
+                        }
+                    }
+
+                    .basket-size-wrapper {
+                        display: none;
+                    }
+                }
+            }
+        }
+
     }
 
     #header {
