--- a/src/scss/_home-estilos.scss
+++ b/src/scss/_home-estilos.scss
@@ -36,6 +36,12 @@
                             margin-bottom: 15px;
                         }
 
+                        @media screen and (max-width: 991px) {
+                            &.mosaico-3 {
+                                margin-bottom: 15px;
+                            }
+                        }
+
                         &.mosaico-1,
                         &.mosaico-3 {
                             >div {
