--- a/src/scss/_preco.scss
+++ b/src/scss/_preco.scss
@@ -3,6 +3,11 @@
         .information {
             .wd-product-price-description {
                 .list-price {
+                    @media screen and (max-width: 768px) {
+                        display: flex;
+
+                    }
+
                     span {
                         font-size: 32px;
                     }
@@ -20,7 +25,7 @@
         color: $gray-25;
         font-size: 15px;
         font-weight: 500;
-        display: flex;
+        display: flex !important;
         flex-direction: column;
 
         &.de-por {
@@ -33,7 +38,9 @@
             }
         }
 
-        .prefix {}
+        .prefix {
+            font-size: 1.4em;
+        }
 
         span {
             font-size: 24px;
@@ -88,7 +95,7 @@
 
 .wd-product-line {
     .wd-product-price-description {
-        height: 60px;
+        height: 100px;
         display: flex;
         align-items: center;
 
