--- a/src/scss/listagem/_produto-grid.scss
+++ b/src/scss/listagem/_produto-grid.scss
@@ -21,8 +21,18 @@
         }
     }
 
+    .wd-header {
+        @media screen and(max-width: 991px) {
+            display: none;
+        }
+    }
+
     header {
         .wd-browsing-grid-pager {
+            @media screen and(max-width: 991px) {
+                display: none;
+            }
+
             .page-number {
                 display: none;
             }
@@ -102,6 +112,12 @@
             li {
                 .wd-product-line {
                     .wd-product-line-medias {
+                        a {
+                            &.thumb {
+                                box-sizing: content-box;
+                            }
+                        }
+
                         @media screen and (min-width: 768px) and (max-width: 991px) {
                             a {
                                 &.thumb {
@@ -170,6 +186,10 @@
                 h2 {
                     margin-bottom: 0;
                     padding-left: 10px;
+
+                    @media screen and(max-width: 991px) {
+                        padding-left: 0;
+                    }
                 }
 
                 .text-category {
