--- a/src/scss/painel/_login.scss
+++ b/src/scss/painel/_login.scss
@@ -30,8 +30,6 @@
     &.LoginRoute {
         background-color: white;
 
-
-
         button[name="Login.Submit"],
         .recover-password-button {
             @extend .btn-wide;
@@ -75,8 +73,8 @@
                 width: 1px;
                 background: $gray-75;
                 background: -moz-linear-gradient(top, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2f5f7 100%);
-background: -webkit-linear-gradient(top, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2f5f7 100%);
-background: linear-gradient(to bottom, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2f5f7 100%);
+                background: -webkit-linear-gradient(top, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2f5f7 100%);
+                background: linear-gradient(to bottom, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2f5f7 100%);
                 height: 460px;
                 margin-top: 110px;
             }
@@ -143,6 +141,8 @@ background: linear-gradient(to bottom, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2
 
                     .wd-profile-login {
                         .input-wrapper {
+                            position: relative;
+
                             label {
                                 width: 100%;
                                 color: $gray-25;
@@ -150,6 +150,25 @@ background: linear-gradient(to bottom, #f2f5f7 0%, #a9abad 50%, #a9abad 52%, #f2
 
                             input {
                                 height: 48px;
+                            }
+                        }
+
+                        div {
+                            &.load {
+                                background: url(/custom/content/themes/Base/Imagens/loading-cart-white.svg?nocache);
+                                background-repeat: no-repeat;
+                                background-size: 35px;
+                                background-position-x: 50%;
+                                background-position-y: 50%;
+                                background-color: rgba(6, 121, 159, 1);
+                                width: 100%;
+                                height: 48px;
+                                left: 44%;
+                                margin-left: 0;
+                                position: absolute;
+                                top: 108px;
+                                left: 0;
+
                             }
                         }
 
