--- a/src/scss/produto/_associacoes.scss
+++ b/src/scss/produto/_associacoes.scss
@@ -26,7 +26,7 @@
                         display: flex;
                         position: absolute;
                         top: 22px;
-                        left: 40px;
+                        right: 0;
                         z-index: 1;
 
                         .wrapper {
@@ -44,6 +44,12 @@
                                 color: $gray-25;
                                 padding: 4px;
                             }
+                        }
+
+                        @media screen and(max-width: 768px) {
+                            top: 0;
+                            left: 0;
+                            right: unset;
                         }
                     }
                 }
