--- a/src/scss/produto/_produto-detalhe.scss
+++ b/src/scss/produto/_produto-detalhe.scss
@@ -453,7 +453,7 @@
 
                         @media screen and(max-width: 991px) {
                             em {
-                                font-size: 30px;
+                                font-size: 20px;
                             }
                         }
                     }
@@ -466,7 +466,7 @@
                     }
 
                     .wd-product-amount {
-                        margin: 16px 0 10px;
+                        margin: 8px 0 10px;
                         display: block;
                         @include input-quantity(45px, 0.6em 0.6em, 60px, 38px, 1.2em);
 
@@ -521,7 +521,7 @@
                             color: transparent;
                             font-size: 0;
                             min-height: 54px;
-                            background-color: mix(#388E3C, white, 70%);
+                            background-color: mix($btn-buy, white, 70%);
 
                             &::before {
                                 content: "";
@@ -583,6 +583,11 @@
                     }
                 }
 
+                .buy-info {
+                    display: flex;
+                    justify-content: flex-end;
+                }
+
                 .deliveryfee {
                     background-color: white;
                     position: relative;
@@ -591,10 +596,27 @@
                 }
             }
 
+            @media screen and(max-width: 768px) {
+
+                .delivery,
+                .payment {
+                    padding: 0;
+
+                    .wd-product-deliveryfee,
+                    .wd-product-payment-options {
+                        margin: 0;
+                        margin-top: 15px;
+                        height: 42px;
+                    }
+                }
+            }
+
             .wd-product-deliveryfee {
                 width: 100%;
                 margin: 24px 0;
                 position: relative;
+
+
 
                 label {
                     display: none;
@@ -611,6 +633,28 @@
                     }
                 }
 
+                &.loading {
+                    .button-wrapper {
+                        button {
+                            font-size: 0;
+                            height: 42px;
+
+                            &::before {
+                                content: '';
+                                width: 100%;
+                                height: 100%;
+                                background: url(/custom/content/themes/Base/Imagens/loading-cart-white.svg);
+                                display: block;
+                                position: absolute;
+                                background-repeat: no-repeat;
+                                background-position: center;
+                                background-size: 30px;
+                                top: 0;
+                            }
+                        }
+                    }
+                }
+
                 .button-wrapper {
                     position: absolute;
                     right: 50px;
@@ -623,6 +667,7 @@
                         @include round(0);
                         padding: 14px 0;
                         text-transform: uppercase;
+                        height: 42px;
                     }
                 }
 
@@ -657,7 +702,7 @@
                     position: relative;
                     z-index: 11;
                     margin-bottom: 10px;
-                    left: 1px;
+                    left: 0;
                 }
             }
 
@@ -1072,175 +1117,6 @@
         }
     }
 
-    .pagamento-box {
-
-        &.open {
-            animation: boxPrice 300ms linear;
-            z-index: 10;
-        }
-
-        @keyframes boxPrice {
-            0% {
-                top: -400px;
-            }
-
-            100% {
-                top: 0px;
-            }
-        }
-
-        border: 1px solid #CED4DA;
-        margin: 0;
-        padding: 0;
-        height: 516px;
-
-        &::before {
-            content: '';
-            width: 16px;
-            height: 12px;
-            display: block;
-            background-image: url(/custom/content/themes/Base/Imagens/ponta5.png?nocache);
-            background-size: contain;
-            background-repeat: no-repeat;
-            position: absolute;
-            top: -10px;
-            right: 80px;
-        }
-
-        #pagamento-formas {
-            overflow: hidden;
-
-            ul {
-                &.nav {
-                    display: flex;
-                    padding: 24px;
-                    background-color: white;
-                    position: relative;
-                    z-index: 12;
-
-                    li {
-                        width: 33.333%;
-                        height: 42px;
-                        text-align: center;
-                        margin: 0;
-                        line-height: 40px;
-                        color: $gray-25;
-                        font-weight: bold;
-                        cursor: pointer;
-
-                        &.selected {
-                            border-bottom: 3px solid #CED4DA;
-                        }
-                    }
-                }
-
-                &.content {
-                    height: auto;
-                    padding: 24px;
-                    padding-top: 0;
-
-                    >li {
-                        max-height: 404px;
-                        height: 404px;
-                        position: relative;
-
-                        &.opened {
-                            animation: boxCondicoes 300ms linear;
-                            z-index: 10;
-
-                        }
-
-                        @keyframes boxCondicoes {
-                            0% {
-                                top: -400px;
-                            }
-
-                            100% {
-                                top: 0;
-                            }
-                        }
-
-                    }
-
-                    li {
-                        .bandeiras {
-                            padding: 10px 0;
-                            margin: 0;
-                            border-bottom: 1px solid #CED4DA;
-
-                            ul {
-                                img {
-                                    margin-right: 5px;
-                                }
-                            }
-                        }
-
-                        h4 {
-                            font-size: 14px;
-                            font-weight: bold;
-                            color: $gray-25;
-                            line-height: 20px;
-                            border-bottom: 1px solid #CED4DA;
-                            padding: 10px 0;
-                            margin-bottom: 0;
-                        }
-
-                        .a-vista {
-                            h4 {
-                                margin-bottom: 16px;
-                            }
-
-                            span {
-                                color: $gray-25;
-                                font-weight: normal;
-                                font-size: 14px;
-                            }
-                        }
-
-                        .prazo {
-                            margin-top: 30px;
-
-                            .parcelas {
-                                max-height: 195px;
-                                overflow: auto;
-
-                                li {
-                                    display: flex;
-
-                                    h6 {
-                                        width: 33.333%;
-                                        color: $gray-25;
-                                        font-weight: normal;
-                                        font-size: 14px;
-                                    }
-                                }
-
-                                li:nth-child(odd) {
-                                    background-color: #f2f2f2;
-                                }
-                            }
-                        }
-
-                        &.boleto {
-                            .bandeiras {
-                                margin-bottom: 16px;
-                            }
-
-                            span,
-                            p {
-                                color: $gray-25;
-                                font-weight: normal;
-                                font-size: 14px;
-                                margin-top: 10px;
-                            }
-                        }
-                    }
-
-                }
-            }
-        }
-    }
-
     .delivery-box {
         border: 1px solid #CED4DA;
         margin: 0;
@@ -1313,6 +1189,38 @@
                             margin: 0;
                         }
                     }
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: 991px) {
+        .pagamento-box {
+            border: 0;
+            height: 600px;
+
+            &::before {
+                display: none;
+            }
+
+            .pagamento-formas {
+                border: 1px solid $gray-75;
+                position: absolute;
+                right: 0;
+                width: 560px;
+                overflow: initial;
+
+                &::before {
+                    content: '';
+                    width: 16px;
+                    height: 12px;
+                    display: block;
+                    background-image: url(/custom/content/themes/Base/Imagens/ponta5.png?nocache);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    position: absolute;
+                    top: -10px;
+                    right: 80px;
                 }
             }
         }
