--- a/src/scss/rodape/_rodape.scss
+++ b/src/scss/rodape/_rodape.scss
@@ -51,6 +51,14 @@
             margin: 0;
             width: 100%;
 
+            .error-flyout {
+                span {
+                    &.error {
+                        max-width: 100% !important;
+                    }
+                }
+            }
+
             form {
                 margin: 10px 0;
             }
@@ -166,6 +174,7 @@
             float: right;
 
             .cms-page {
+
                 h2 {
                     small {
                         margin-top: 0;
@@ -210,12 +219,21 @@
                             margin-top: 15px;
 
                             a {
-                                font-size: 14px;
-                                color: $gray-25;
-                                font-weight: normal;
+                                display: none;
+                            }
 
-                                &:hover {
-                                    color: #373a3f;
+                            ul {
+                                li {
+                                    a {
+                                        font-size: 14px;
+                                        color: $gray-25;
+                                        font-weight: normal;
+                                        display: block;
+
+                                        &:hover {
+                                            color: $gray-75;
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -328,6 +346,10 @@
 
         .shields {
             margin-top: 12px;
+
+            img {
+                width: 290px;
+            }
 
             >a {
                 float: left;
