--- a/src/scss/topo/_hamburguer.scss
+++ b/src/scss/topo/_hamburguer.scss
@@ -75,7 +75,7 @@
     .dropdown-menu {
         display: none;
         background-color: #fff;
-        padding: 10px 15px;
+        padding: 15px !important;
         position: absolute;
         width: 100%;
         left: -1000%;
@@ -86,15 +86,97 @@
 
         .close-icon {
             text-align: right;
+            position: absolute;
+            right: 15px;
+            padding-right: 10px;
 
             .close-hamburguer {
                 background-color: transparent;
                 padding: 0;
                 font-weight: bold;
-                color: $gray-medium;
+                color: $gray-25;
 
                 i {
                     font-size: 26px;
+                }
+            }
+        }
+
+        .account {
+
+            border-bottom: 1px solid $gray-75;
+            margin-bottom: 10px;
+            padding: 10px;
+            padding-bottom: 5px;
+            padding-top: 5px;
+
+            .unautenticated {
+                li {
+                    &.title {
+                        display: flex;
+                        margin: 0;
+
+                        i {
+                            font-size: 4em;
+                            color: $gray-25;
+                        }
+
+                        >div {
+                            margin-top: 0;
+
+                            p,
+                            b {
+                                padding: 0;
+                                padding-right: 30px;
+                            }
+
+                            p {
+                                padding-top: 0;
+                            }
+
+                            b {
+                                padding-bottom: 0;
+                                font-size: 16px;
+                            }
+                        }
+                    }
+
+                    &.buttons {
+                        display: flex;
+                        justify-content: space-between;
+                        margin-top: 0;
+
+                        .register {
+                            @include round(0);
+                        }
+
+                        button {
+                            padding: 1em 1em;
+                        }
+
+                        .login {
+                            background-color: $base-color;
+                            width: 48%;
+                            @include round(0);
+
+                            a {
+                                color: white;
+                                padding: 0;
+                            }
+                        }
+
+                        .register {
+                            background-color: white;
+                            border: 1px solid $base-color;
+
+                            width: 48%;
+
+                            a {
+                                color: $base-color;
+                                padding: 0;
+                            }
+                        }
+                    }
                 }
             }
         }
