--- a/src/scss/painel/_login.scss
+++ b/src/scss/painel/_login.scss
@@ -160,7 +160,7 @@
                                 background-size: 35px;
                                 background-position-x: 50%;
                                 background-position-y: 50%;
-                                background-color: rgba(6, 121, 159, 1);
+                                background-color: $base-color;
                                 width: 100%;
                                 height: 48px;
                                 left: 44%;
